--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gluonhq</groupId>
     <artifactId>rich-text-area-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -18,6 +17,7 @@
 
     <modules>
         <module>rta</module>
+        <module>samples</module>
     </modules>
 
     <developers>
@@ -119,8 +119,8 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.6.0</version>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M2</version>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
