--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Publish to Maven Central
         id: deploy
         run: |
-          mvn -DskipTests=true -B -U -ntp -Prelease deploy
+          mvn -DskipTests=true -B -U -ntp -Prelease deploy -pl '!samples'
           echo ::set-output name=exit_code::$?
         env:
           MAVEN_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
