--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.gluonhq</groupId>
         <artifactId>rich-text-area-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <name>Rich Text Area</name>
