--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.gluonhq</groupId>
         <artifactId>rich-text-area-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <name>Rich Text Area samples</name>
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>rich-text-area</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
