--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -2,7 +2,7 @@ name: Publish Snapshot
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   deploy:
@@ -11,11 +11,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          java-version: 17
+          distribution: 'oracle'
+          cache: 'maven'
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_CENTRAL_TOKEN
@@ -24,10 +25,10 @@ jobs:
         id: deploy
         run: |
           # Find version
-          ver=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          ver=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout -frta)
           if [[ $ver == *"SNAPSHOT"* ]]
           then
-              mvn -B -ntp deploy -pl '!samples'
+              mvn -B -ntp deploy -f rta
           fi
         shell: bash
         env:
