--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -2,28 +2,28 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.gluonhq.gluonfx</groupId>
     <artifactId>rich-text-area-samples</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <parent>
-        <groupId>com.gluonhq</groupId>
-        <artifactId>rich-text-area-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
-    </parent>
 
     <name>Rich Text Area samples</name>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>11</maven.compiler.release>
+        <javafx.version>20</javafx.version>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
         <main.class>com.gluonhq.richtextarea.samples.RichTextEditorDemo</main.class>
         <jpro.version>2022.1.0</jpro.version>
+        <rta.version>2.0.0-SNAPSHOT</rta.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>rich-text-area</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>${rta.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -33,12 +33,12 @@
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-lineawesome-pack</artifactId>
-            <version>12.3.0</version>
+            <version>12.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
-            <version>12.2.0</version>
+            <version>12.3.1</version>
         </dependency>
         <dependency>
             <groupId>com.sandec.jpro</groupId>
@@ -49,6 +49,11 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
