--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -2,7 +2,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.gluonhq.gluonfx</groupId>
+    <groupId>com.gluonhq</groupId>
     <artifactId>rich-text-area-samples</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
