--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -85,6 +85,10 @@
 
     <repositories>
         <repository>
+            <id>snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
             <id>jpro - sandec repository</id>
             <url>https://sandec.jfrog.io/artifactory/repo</url>
         </repository>
