--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -14,7 +14,7 @@
         <maven.compiler.release>11</maven.compiler.release>
         <javafx.version>20</javafx.version>
         <javafx.plugin.version>0.0.8</javafx.plugin.version>
-        <main.class>com.gluonhq.richtextarea.samples.RichTextEditorDemo</main.class>
+        <main.class>com.gluonhq.richtextarea.samples.FullFeaturedDemo</main.class>
         <jpro.version>2022.1.0</jpro.version>
         <rta.version>1.1.0-SNAPSHOT</rta.version>
     </properties>
