--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           ver=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout -f rta)
           if [[ $ver == *"SNAPSHOT"* ]]; then
-              mvn -B -ntp deploy -f rta
+              mvn -B -ntp -Dmaven.test.skip=true deploy -f rta
           fi
         shell: bash
         env:
