run build workflow on all platforms (#326)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -23,13 +26,19 @@ jobs:
           server-password: MAVEN_CENTRAL_TOKEN
 
       - name: Build project
+        if: runner.os != 'Linux'
+        run: |
+          mvn -B -ntp verify -f rta
+
+      - name: Build project (Linux)
+        if: runner.os == 'Linux'
         run: |
           export DISPLAY=:90
           Xvfb -ac :90 -screen 0 1280x1024x24 > /dev/null 2>&1 &
           mvn -B -ntp verify -f rta
 
       - name: Publish Snapshots
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && runner.os == 'Linux'
         run: |
           ver=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout -f rta)
           if [[ $ver == *"SNAPSHOT"* ]]; then
