--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -144,6 +144,12 @@
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
                     <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+                    <systemProperties>
+                        <property>
+                            <name>java.util.logging.config.file</name>
+                            <value>src/test/resources/logging.properties</value>
+                        </property>
+                    </systemProperties>
                 </configuration>
                 <dependencies>
                     <dependency>
