add test scope for testfx dependency

--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -47,6 +47,7 @@
             <groupId>org.testfx</groupId>
             <artifactId>testfx-junit5</artifactId>
             <version>4.0.18</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
