--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,33 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Java
+      - name: Setup java (tests)
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'oracle'
+          java-version: '22'
+          cache: 'maven'
+          server-id: 'OpenJFX Test Builds'
+          server-username: NEXUS_USERNAME
+          server-password: NEXUS_PASSWORD
+
+      - name: Build project (Linux/macOS)
+        if: runner.os != 'Windows'
+        run: |
+          ./mvnw -B -ntp -Ptest verify -f rta
+        env:
+          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+
+      - name: Build project (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          .\mvnw -B -ntp -Ptest verify -f rta
+        env:
+          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+
+      - name: Setup Java (distribution)
         uses: actions/setup-java@v4
         with:
           java-version: 21
@@ -24,23 +50,6 @@ jobs:
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_CENTRAL_TOKEN
-
-      - name: Build project (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          ./mvnw -B -ntp verify -f rta
-
-      - name: Build project (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          .\mvnw -B -ntp verify -f rta
-
-      - name: Build project (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          export DISPLAY=:90
-          Xvfb -ac :90 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-          ./mvnw -B -ntp verify -f rta
 
       - name: Publish Snapshots
         if: github.ref == 'refs/heads/main' && runner.os == 'Linux'
