Use correct link

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -86,7 +86,7 @@
     <repositories>
         <repository>
             <id>snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <url>https://central.sonatype.com/repository/maven-snapshots</url>
         </repository>
         <repository>
             <id>jpro - sandec repository</id>
