--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -50,13 +50,13 @@
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
-            <version>4.0.19-gluon-SNAPSHOT</version>
+            <version>4.0.19-gluon</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-junit5</artifactId>
-            <version>4.0.19-gluon-SNAPSHOT</version>
+            <version>4.0.19-gluon</version>
             <scope>test</scope>
         </dependency>
         <dependency>
