--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -15,11 +15,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
-        <javafx.version>26-ea+15</javafx.version>
+        <javafx.version>23.0.1</javafx.version>
         <gpg.plugin.version>3.2.7</gpg.plugin.version>
         <emoji.version>1.1.0</emoji.version>
         <test.headless/>
-        <test.javafx.version>24-headless+0-2024-12-02-101029</test.javafx.version>
+        <test.javafx.version>26-ea+15</test.javafx.version>
     </properties>
 
     <dependencies>
@@ -180,7 +180,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.2</version>
+                <version>3.5.4</version>
                 <configuration>
                     <trimStackTrace>false</trimStackTrace>
                     <argLine>${test.headless} --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
@@ -228,7 +228,7 @@
         <profile>
             <id>test</id>
             <properties>
-                <test.headless>-Dtestfx.headless=true</test.headless>
+                <test.headless>-Dtestfx.headless=true -Dprism.order=sw</test.headless>
             </properties>
             <dependencies>
                 <dependency>
